Fixed calendar collapse accordion

--- a/pms_pwa/static/src/scss/o_pms_pwa_custom.scss
+++ b/pms_pwa/static/src/scss/o_pms_pwa_custom.scss
@@ -504,4 +504,6 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     color: $theme-color;
     text-align: "center";
     margin-left: 40%;
+    font-size: 16px;
+    font-weight: 600;
 }
